added phrase bank and added some css

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,10 @@
 .Typing-Test {
   background-color: #e2e1e1;
+  position: fixed; 
+  top:4%;
+  right:0;
+  left:0;
+  bottom:0;
 }
 
 .Content {
@@ -11,6 +16,11 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: rgb(0, 0, 0);
+  /* position: fixed; 
+  top:0;
+  right:0;
+  left:0;
+  bottom:0; */
 }
 
 h4 {
